--- a/src/components/layout/MainLayout/MainLayout.module.scss
+++ b/src/components/layout/MainLayout/MainLayout.module.scss
@@ -1,4 +1,9 @@
 @import "../../../styles/settings.scss";
 
 .root {
+  min-height: 100vh;
+  width: $container-width-lg;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
