--- a/src/components/features/PokemonList/PokemonList.module.scss
+++ b/src/components/features/PokemonList/PokemonList.module.scss
@@ -1,4 +1,9 @@
 @import "../../../styles/settings.scss";
 
 .root {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(150px, auto);
+  gap: 16px;
 }
