Add settings and adjust Homepage styles

--- a/src/components/features/Pokemon/Pokemon.module.scss
+++ b/src/components/features/Pokemon/Pokemon.module.scss
@@ -4,6 +4,12 @@
   margin: 15px;
   border: 1px solid #ccc;
   border-radius: $radius;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: $transition;
+
+  &:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  }
 }
 
 .title {
