--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -2,10 +2,15 @@
 
 .root {
   flex-grow: 1;
+  min-height: calc(100vh - 120px);
 }
 
 .search {
   display: grid;
   justify-content: center;
   align-items: center;
+}
+
+.button {
+  margin: 2rem auto;
 }
