--- a/src/components/views/PokemonPage/PokemonPage.module.scss
+++ b/src/components/views/PokemonPage/PokemonPage.module.scss
@@ -25,10 +25,43 @@
   display: flex;
   flex-direction: column;
 }
+.statsContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
 .name {
   font-size: 2rem;
   font-weight: 900;
   text-align: center;
   margin: 2rem 0;
+}
+
+.stats {
+  font-size: 2.5rem;
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 1rem;
+  position: relative;
+}
+
+.stats .tooltiptext {
+  font-size: 1rem;
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+}
+
+.stats:hover .tooltiptext {
+  visibility: visible;
 }
