Add main color for styles

--- a/src/components/common/SearchInput/SearchInput.module.scss
+++ b/src/components/common/SearchInput/SearchInput.module.scss
@@ -5,10 +5,16 @@
 }
 
 .input {
-  height: 40px;
+  height: 60px;
   font-weight: 900;
-  font-size: 18px;
+  font-size: 1.5rem;
   padding-left: 18px;
   border-radius: 20px;
   outline: none;
+  border-color: $Primary;
+  color: $Primary;
+
+  &::placeholder {
+    color: rgba($Primary, 0.8);
+  }
 }
