--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -9,22 +9,24 @@
   justify-content: center;
   letter-spacing: 2px;
   text-transform: uppercase;
-  width: 197px;
+  min-width: 100px;
   height: 45px;
   border-radius: 36px;
-  background-color: #ccc;
+  background-color: $Primary;
   cursor: pointer;
   transition: $transition;
   border: none;
   color: white;
   outline: none;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 10px 20px;
 
   &:hover {
     background-color: rgba(#ccc, 0.8);
+    color: $Primary;
   }
 
   &:focus {
-    box-shadow: 0 0 3px 2px red;
+    box-shadow: 0 0 3px 2px $Primary;
   }
 }
