--- a/src/components/common/Spinner/Spinner.module.scss
+++ b/src/components/common/Spinner/Spinner.module.scss
@@ -9,7 +9,7 @@
 
 .spinner {
   border: 16px solid #ccc;
-  border-top: 16px solid black;
+  border-top: 16px solid $Primary;
   border-radius: 50%;
   width: 120px;
   height: 120px;
