--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,11 +12,12 @@
 html {
   font-size: $base-size;
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 body {
   font-family: $font-text;
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba($Primary, 0.8);
 }
 
 a,
