--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,6 +1,9 @@
 $font-header: "Lato", sans-serif;
 $font-text: "Roboto", sans-serif;
 
+$Primary: #30124e;
+$Secondary: #9b94a3;
+
 $radius: 8px;
 
 $base-size: 16px;
