--- a/src/components/common/ButtonLink/ButtonLink.module.scss
+++ b/src/components/common/ButtonLink/ButtonLink.module.scss
@@ -12,7 +12,7 @@
   width: 160px;
   height: 45px;
   border-radius: 36px;
-  background-color: #ccc;
+  background-color: rgba($Secondary, 0.8);
   cursor: pointer;
   transition: $transition;
   border: none;
@@ -21,10 +21,10 @@
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
   &:hover {
-    background-color: rgba(#ccc, 0.8);
+    background-color: rgba($Secondary, 0.6);
   }
 
   &:focus {
-    box-shadow: 0 0 3px 2px red;
+    box-shadow: 0 0 3px 2px $Primary;
   }
 }
