--- a/src/components/common/Logo/Logo.module.scss
+++ b/src/components/common/Logo/Logo.module.scss
@@ -9,5 +9,6 @@
   align-items: center;
   font-family: $font-header;
   font-weight: 900;
-  font-size: 1.33rem;
+  font-size: 2.5rem;
+  margin-top: 1rem;
 }
