--- a/src/components/features/Pokemon/Pokemon.module.scss
+++ b/src/components/features/Pokemon/Pokemon.module.scss
@@ -3,7 +3,7 @@
 .root {
   margin: 15px;
   border: 1px solid #ccc;
-  border-radius: $radius;
+  border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: $transition;
 
