--- a/src/components/layout/Navigation/Navigation.module.scss
+++ b/src/components/layout/Navigation/Navigation.module.scss
@@ -23,7 +23,7 @@
     content: "";
     transition: $transition;
     position: absolute;
-    background: black;
+    background: $Primary;
     width: 35%;
     left: 50%;
     transform: translateX(-50%);
@@ -50,7 +50,7 @@
   &::after {
     content: "";
     position: absolute;
-    background: black;
+    background: $Primary;
     width: 35%;
     left: 50%;
     transform: translateX(-50%);
