--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -14,3 +14,10 @@
 .button {
   margin: 2rem auto;
 }
+
+.error {
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 4rem;
+  color: rgba(red, 0.8);
+}
